Pipeline stages can incorrectly passthrough mongos when nested within a $lookup sub-pipeline

XMLWordPrintableJSON

    • Fully Compatible
    • v4.2
    • Query 2019-07-01
    • 74
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There is an interface on LiteParsedDocumentSource to indicate whether a stage is allowed to passthrough from mongos, however the $lookup stage (and $facet) does not call this on its sub-pipeline.

            Assignee:
            Arun Banala
            Reporter:
            Nicholas Zolnierz
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: