SERVER-41290 Pipeline stages can incorrectly passthrough mongos when nested within a  sub-pipeline

GitOrigin-RevId: 3642a8fae987f087522a4609289e5764d2c8718c