src/mongo/db/modules/enterprise/src/hot_backups/document_source_backup_cursor.h
@@ -67,7 +67,7 @@ public:
             return true;
         }
 
-        bool allowedToForwardFromMongos() const final {
+        bool allowedToPassthroughFromMongos() const final {
             return false;
         }
 
