src/mongo/db/modules/enterprise/src/hot_backups/document_source_backup_cursor_extend.h
@@ -66,7 +66,7 @@ public:
             return true;
         }
 
-        bool allowedToForwardFromMongos() const final {
+        bool allowedToPassthroughFromMongos() const final {
             return false;
         }
 
